Module 2/Assignments/2012111111/error.txt
assign.cpp:9:25: error: expected ';' after expression
   cout << a+b+c << endl
                        ^
                        ;
1 error generated.
